--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -499,7 +499,8 @@ margin: 3%;
   align-items: center;
   margin-left: 80%;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 10px;
+  background-color: #333;
 
 }
 .comen{
@@ -507,21 +508,9 @@ margin: 3%;
     padding: 5px;
     border: 1px solid orange;
     margin-bottom: 2px;
-    border-radius: 5px;
+    border-radius: 10px;
   }
-  
-  .enviarComentario {
-    display: block;
-    background: linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
-    color: #fff;
-    padding: 5px;
-    text-align: center;
-    border: none;
-    cursor: pointer;
-    width: 20%;
-    margin-left: 40%;
-  }
-  
+
 
 .encabezadoCP {
   margin-bottom: 10px;
@@ -534,6 +523,7 @@ margin: 3%;
   margin: 20px;
   padding: 10px;
   text-align: center;
+  color: white;
 
 }
 
@@ -542,7 +532,9 @@ margin: 3%;
   border: 3px solid orange;
   width: 60%;
   padding: 5px;
-  box-sizing: border-box;/
+  box-sizing: border-box;
+  background-color: #333;
+  border-radius: 10px;
 }
 
 
