--- a/src/main/resources/templates/panelProveedor.html
+++ b/src/main/resources/templates/panelProveedor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <title>Title</title>
   </head>
   <body>
@@ -38,7 +38,7 @@
           >Ver mis ordenes
         </a>
       </li>
-      <li><hr class="dropdown-divider" /></li>
+      <li><hr class="dropdown-divider" ></li>
     </ul>
 
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -50,7 +50,7 @@
           >Editar Perfil</a
         >
       </li>
-      <li><hr class="dropdown-divider" /></li>
+      <li><hr class="dropdown-divider" ></li>
     </ul>
     <a
       th:if="${session.personasession != null}"
