--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -31,19 +31,19 @@
 
                     <ul  th:if="${session.personasession != null}">
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                         > Perfil </a>
 
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" th:href="@{/perfilUsuario}" >Editar mi Perfil</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Perfil </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" th:href="@{/perfilUsuario}" >Editar mi Perfil</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" th:href="@{/orden/ordenes}"  > Ver mis ordenes </a></li>
+                                  <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="/logout" >Cerrar Sesión</a></li>
+                            </ul>
+                        </li>
 
-                            <li><a class="dropdown-item" href="/logout" >Cerrar Sesión</a></li>
-                        </ul>
-                    </li>
-
-                </ul>
+                    </ul>
                 </div>
             </div>
         </div>
