--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -44,18 +44,6 @@
 
 
 
-                <div class="izqAb">
-
-                    <p><input type="text" class="comen" placeholder="comentario" name="comentario"
-                        required="required"></p>
-
-                        <a class="" href="#">
-                            <imput type="button" class="btn btn-primary btn-block py-3" id="enviarComentario"
-                                onclick="alert('el boton Enviar OT funciona')">Enviar</imput>
-                        </a>
-                </div>
-
-
             </div>
 
         <div class="derecha">
@@ -81,11 +69,19 @@
                     </form>
                 </div>
             </div>
-
-
         </div>
-
     </div>
+
+
+    <section class="text-center container">
+        <div class="row mt-3">
+            <div class="divVolver">
+                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+            </div>
+        </div>
+    </section>
+
+
     <footer class="pie">
         <div th:replace="fragments/footer::foot"></div>
         <div th:replace="fragments/redesS::red_soc"></div>
