--- a/src/main/resources/templates/modificarProveedor.html
+++ b/src/main/resources/templates/modificarProveedor.html
@@ -9,9 +9,11 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     >
-    <link rel="stylesheet" href="/css/formulario.css">
+    <link rel="stylesheet" href="/css/estilos2.css">
   </head>
   <body>
+    <nav th:replace="fragments/navbar::nav"></nav>
+
     <div class="container-fluid m-5 contenedor">
       <form
         class="formulario"
@@ -129,23 +131,10 @@
       </section>
     </div>
 
-    <footer class="text-muted py-5">
-      <div class="containerFooter">
-        <p class="mb-1">
-          Album example is &copy; Bootstrap,<br>but please download and
-          customize it for yourself!
-        </p>
-        <p class="mb-0">
-          New to Bootstrap? <a href="/"><br>Visit the homepage</a> or read our
-          <a href="../getting-started/introduction/">getting started guide</a>.
-        </p>
-        <p class="float-end mb-1">
-          <a href="#" style="text-decoration: none"
-            ><span>â¬ï¸</span> Back to top</a
-          >
-        </p>
-      </div>
-    </footer>
+    <footer class="pie">
+      <div th:replace="fragments/footer::foot"></div>
+      <div th:replace="fragments/redesS::red_soc"></div>
+  </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
