--- a/src/main/resources/templates/modificarUsuario.html
+++ b/src/main/resources/templates/modificarUsuario.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="ISO-8859-1" />
-    <title>Modificar usuario</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/formulario.css" />
-  </head>
+<html xmlns:th="http://www.thymeleaf.org/" html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>perfilUsuario</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
+</head>
+
   <body>
+
+    <nav th:replace="fragments/navbar::nav"></nav>
+
+
     <div class="container-fluid m-5 contenedor">
       <form
         class="formulario"
@@ -73,7 +75,7 @@
           Actualizar
         </button>
       </form>
-
+</div>
       <section class="text-center container">
         <div class="row mt-3">
           <div class="divVolver">
@@ -85,25 +87,11 @@
           </div>
         </div>
       </section>
-    </div>
 
-    <footer class="text-muted py-5">
-      <div class="containerFooter">
-        <p class="mb-1">
-          Album example is &copy; Bootstrap,<br />but please download and
-          customize it for yourself!
-        </p>
-        <p class="mb-0">
-          New to Bootstrap? <a href="/"><br />Visit the homepage</a> or read our
-          <a href="../getting-started/introduction/">getting started guide</a>.
-        </p>
-        <p class="float-end mb-1">
-          <a href="#" style="text-decoration: none"
-            ><span>â¬ï¸</span> Back to top</a
-          >
-        </p>
-      </div>
-    </footer>
+      <footer class="pie">
+        <div th:replace="fragments/footer::foot"></div>
+        <div th:replace="fragments/redesS::red_soc"></div>
+      </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
