--- a/src/main/resources/templates/panelProveedor.html
+++ b/src/main/resources/templates/panelProveedor.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
+
   <head>
-    <meta charset="UTF-8" >
-    <title>Title</title>
-  </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="" type="image/x-icon">
+    <title>panelProveedor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
+</head>
+
   <body>
+
+
+    <nav th:replace="fragments/navbar::nav"></nav>
+
     <h1>Mi Perfil</h1>
     <div class="col-md-4">
       <div class="container">
@@ -18,45 +28,67 @@
       </div>
     </div>
 
-    <a
-      class="nav-link dropdown-toggle"
-      href="#"
-      id="navbarDropdown"
-      role="button"
-      data-bs-toggle="dropdown"
-      aria-expanded="false"
-    >
-      Perfil
-    </a>
+    <div class="container4">
+      <ul>
+          <th:block th:each="proveedor: ${proveedores}">
+            <div class="col-md-4">
+                <div class="card1" style="background-color: #000; width: 300px;">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzhK86EovE1pAkcsj0G7ptzdV5-Cs35zSWnA&usqp=CAU" class="card-img-top" alt="Proveedor 1">
+                    <div class="card-body" >
+                      <h5 style="font-weight: bold; color: white;">Nombre:  <span class="card-text" th:text="${proveedor.nombre}"></span></h5>
+                      <h5 style="color: white;">Direccion:  <span class="card-text" th:text="${proveedor.direccion}"></span></h5>
 
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-      <li>
+                      <h5 style="color: white;">Honorarios por hora:  <span class="card-text" th:text="${proveedor.honorarioHora}"></span></h5>
+                      <h5 class="card-text" style="color: white;">Cantidad de estrellas:  5</h5>
+                    </div>
+                </div>
+            </div>
+          </th:block>
+      </ul>
+  </div>
         <a
           th:if="${session.personasession != null}"
           th:href="@{/orden/ordenes}"
           class="nav-link"
           >Ver mis ordenes
         </a>
-      </li>
-      <li><hr class="dropdown-divider" ></li>
-    </ul>
 
-    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-      <li>
+
         <a
           th:if="${session.personasession != null}"
           th:href="@{perfil}"
           class="nav-link"
           >Editar Perfil</a
         >
-      </li>
-      <li><hr class="dropdown-divider" ></li>
-    </ul>
+
     <a
       th:if="${session.personasession != null}"
       th:href="@{/logout}"
       class="nav-link"
       >Cerrar Sesión</a
     >
+
+
+
+  <section class="text-center container">
+    <div class="row mt-3">
+        <div class="divVolver">
+            <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+        </div>
+    </div>
+  </section>
+
+  <footer class="pie">
+    <div th:replace="fragments/footer::foot"></div>
+    <div th:replace="fragments/redesS::red_soc"></div>
+  </footer>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+
   </body>
 </html>
