Logica OT lsita, falta pulir detalles

--- a/src/main/resources/templates/Calificar.html
+++ b/src/main/resources/templates/Calificar.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Calificar Orden de Trabajo</h1>
+    <!--
     <div>
       <p>Califica tu experiencia con esta orden de trabajo:</p>
       <form
@@ -37,6 +38,6 @@
 
         <button type="submit">Enviar Calificación</button>
       </form>
-    </div>
+    </div>-->
   </body>
 </html>
