--- a/src/main/resources/templates/Buscador.html
+++ b/src/main/resources/templates/Buscador.html
@@ -135,7 +135,7 @@
         <img src="https://pic.52112.com/180603/JPG-180603_376/z8rcPckn7v_small.jpg" alt="Descripción de la imagen">
     </div>
 
-    <section class="text-center container">
+    <section class="">
         <div class="row mt-3">
             <div class="divVolver">
                 <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
