--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -15,8 +15,9 @@
 <body>
 
     <nav th:replace="fragments/navbar::nav"></nav>
+    <h1 class="text-center">ProSkillFinder</h1>
 
-    <h1 class="titulo1">ENVIALE UN MENSAJE A TU PROVEEDOR</h1>
+    <h1 class="titulo1"> "No dejes pasar esta oportunidad. Obtén un presupuesto personalizado sin compromiso. Solo tienes que contactar a tu proveedor seleccionado."</h1>
     <div class="pantalla">
 
             <div class="izquiercon">
@@ -73,7 +74,7 @@
     </div>
 
 
-    <section class="text-center container">
+    <section class="">
         <div class="row mt-3">
             <div class="divVolver">
                 <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
