--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
     <a href="/login" class="button">Conectate!</a>
   </div>
 
-  <section class="text-center container">
+  <section class="">
     <div class="row mt-3">
       <div class="divVolver">
         <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
