--- a/src/main/resources/static/css/estilos2.css
+++ b/src/main/resources/static/css/estilos2.css
@@ -14,11 +14,11 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  background-color: #000;
+  background-color: #1a1919;
 }
 
 .texto-pie {
-  font-family: 'Maven Pro', sans-serif;
+  font-family: sans-serif;
   text-align: center;
   color: rgb(212, 205, 205);
 }
@@ -45,7 +45,6 @@
 
 body {
   background: linear-gradient(90deg, rgb(255, 239, 122) 0%, rgb(229, 113, 5) 100%);
-  ;
 }
 
 
@@ -174,7 +173,7 @@ body {
   text-decoration: none;
   border-radius: 5px;
   font-weight: bold;
-  text-align: center
+  text-align: center;
 }
 
 .button:hover {
@@ -246,9 +245,10 @@ body {
   border-radius: 10px;
   width: 50%;
   padding: 20px;
-  background-color: #000;
+  background-color: #333;
   margin-right: 5%;
   margin-left: 10%;
+  border: 5px solid orange;
 }
 
 .right-side {
@@ -256,13 +256,14 @@ body {
   width: 50%;
   padding: 14px;
   margin-bottom: 15px;
-  background-color: #000;
+  background-color: #333;
   margin-left: 5%;
   margin-right: 10%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 5px solid orange;
 }
 
 .card-title {
@@ -282,9 +283,9 @@ body {
 }
 
 .box {
-  background-color: #000;
+  background-color: #333;
   padding: 20px;
-  border: 1px solid #000;
+
 }
 
 h4 {
@@ -293,13 +294,9 @@ h4 {
   color: white;
 }
 
-button {
-  display: block;
-  margin: 10px 0;
-}
-
 .btn {
   background: linear-gradient(90deg, rgb(125, 45, 245) 0%, rgb(111, 111, 226) 100%);
+  margin-left:48%;
 }
 
 .textobox {
@@ -315,7 +312,7 @@ button {
   margin: 0 auto;
   padding: 20px;
   border: 5px solid orange;
-  background-color: #000;
+  background-color: #333;
   border-radius: 2%;
   display: flex;
   flex-direction: column;
@@ -369,7 +366,7 @@ textarea {
   margin-left: 30%;
   margin-top: 4%;
   text-align: justify;
-  background-color: #000;
+  background-color: #333;
   height: auto;
 }
 
@@ -537,11 +534,34 @@ margin: 3%;
   border-radius: 10px;
 }
 
+/*Modificar Usuario*/
 
 
+.modUsuario{
+  border: 3px solid orange;
+  background-color: #333;
+  width: 50%;
+  margin: 10%;
+  align-items: center;
+  border-radius: 15px;
+  margin-left: 24%;
+}
 
+.formularioUsua{
+width: 80%;
+margin: 10%;
+}
 
-   
+#botforUs{
+  margin-top: 5%;
+  margin:5%;
+  margin-left: 40%;
+
+}
+.text-center{
+  margin: 5%;
+}
+
 
 /* Media query para pantallas más pequeñas */
 @media screen and (max-width: 768px) {
@@ -624,6 +644,19 @@ margin: 3%;
 .enviarComentario {
   width: 30%;
 }
+
+#botforUs{
+  margin:5%;
+  margin-left: 24%;
+}
+
+.btn {
+  margin-left:43%;
+}
+
+
+
+
 }
 
 @media screen and (max-width: 991px) {
