--- a/src/main/resources/templates/LoginUsuario.html
+++ b/src/main/resources/templates/LoginUsuario.html
@@ -53,7 +53,7 @@
             </form>
         </div>
     </div>
-    <section class="text-center container">
+    <section class="">
         <div class="row mt-3">
             <div class="divVolver">
                 <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
