--- a/src/main/resources/templates/conocenos.html
+++ b/src/main/resources/templates/conocenos.html
@@ -99,7 +99,7 @@
 
 
 
-    <section class="text-center container">
+    <section class="">
         <div class="row mt-3">
             <div class="divVolver">
                 <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
