--- a/src/main/resources/templates/panelUsuario.html
+++ b/src/main/resources/templates/panelUsuario.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="es">
   <head>
       <meta charset="UTF-8">
@@ -61,3 +61,4 @@
 </body>
 
 </html>
+-->
