--- a/src/main/resources/templates/registroUsuario.html
+++ b/src/main/resources/templates/registroUsuario.html
@@ -53,7 +53,7 @@
     </form>
 
 
-    <section class="text-center container">
+    <section class="">
         <div class="row mt-3">
             <div class="divVolver">
                 <a th:href="@{/login}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
