--- a/src/main/resources/templates/ContactarProveedor.html
+++ b/src/main/resources/templates/ContactarProveedor.html
@@ -65,7 +65,7 @@
                             <p><input type="text" class="form-control p-4" placeholder="ingresa acá tu comentario" name="comentario" required="required"></p>
                         </div>
                         <div class="boton">
-                                 <button class="btn btn-primary btn-block py-3" type="submit">Enviar</button>
+                                 <button class="enviar btn-primary btn-block py-3" type="submit">Enviar</button>
                         </div>
                     </form>
                 </div>
