--- a/src/main/resources/templates/registroProveedor.html
+++ b/src/main/resources/templates/registroProveedor.html
@@ -1,131 +1,92 @@
 <!DOCTYPE html>
-<html
-  xmlns:th="http://www.thymeleaf.org"
-  xmlns:sec="https://www.thymeleaf.org/extras/spring-security"
-  lang="es"
->
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="" type="image/x-icon" />
-    <title>ProSkillFinder</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" th:href="@{/css/estilos2.css}" />
-  </head>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/extras/spring-security" lang="es">
 
-  <body>
-    <nav th:replace="fragments/navbar::nav"></nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="" type="image/x-icon" />
+  <title>ProSkillFinder</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" th:href="@{/css/estilos2.css}" />
+</head>
 
-    <h1 class="textind">ProSkillFinder</h1>
-    <h6 class="textRegU">
-      ¿Eres un proveedor de servicios? <br />
-      ¿Quieres llegar a más clientes y aumentar tus oportunidades de negocio?<br />
-      Entra en nuestro portal de servicios y regístrate como proveedor <br />
-      Es sencillo. Completa tu perfil y selecciona tu categoría de servicios.
+<body>
+  <nav th:replace="fragments/navbar::nav"></nav>
+
+  <h1 class="textind">ProSkillFinder</h1>
+  <h6 class="textRegU">
+    ¿Eres un proveedor de servicios? <br />
+    ¿Quieres llegar a más clientes y aumentar tus oportunidades de negocio?<br />
+    Entra en nuestro portal de servicios y regístrate como proveedor <br />
+    Es sencillo. Completa tu perfil y selecciona tu categoría de servicios.
+    <br />
+  </h6>
+  <div class="container3">
+    <h3 class="ruh3">Registro de Proveedor</h3>
+    <form action="/proveedor/registro" method="POST" enctype="multipart/form-data">
+      <label class="textofp" for="nombre">Nombre:</label>
+      <input type="text" id="nombre" name="nombre" required /><br />
+
+      <label class="textofp" for="email">Email:</label>
+      <input class="text" type="email" id="email" name="email" required /><br />
+
+      <label class="textofp" type="file">Foto de perfil</label>
+      <input class="textofp" type="file" name="archivo" />
+
+      <label class="textofp" for="password">Contraseña:</label>
+      <input type="password" id="password" name="password" required /><br />
+
+      <label class="textofp" for="password2">Repita su contraseña:</label>
+      <input type="password" id="password2" name="password2" required /><br />
+
+      <label class="textofp" for="telefono">Teléfono:</label>
+      <input type="number" id="telefono" name="telefono" required /><br />
+
+      <label class="textofp" for="direccion">Dirección:</label>
+      <input type="text" id="direccion" name="direccion" required /><br />
+
+      <label class="textofp" for="honorarioHoras">Honorario por Horas:</label>
+      <input type="number" id="honorarioHoras" name="honorarioHoras" step="0.01" required /><br />
+
+      <label class="textofp" for="rubro">selecciona un rubro:</label>
+      <select id="rubro" name="rubro">
+        <option value="Jardinero">Jardinero</option>
+        <option value="Chapista">Chapista</option>
+        <option value="Piletero">Piletero</option>
+        <option value="Salidor">Salidor</option>
+        <option value="Limpieza">Limpieza</option>
+        <option value="Otro">
+          Otro
+          <input type="text" id="rubroOtro" name="rubroOtro" placeholder="Especificar otro rubro"
+            style="display: none" />
+        </option>
+      </select>
       <br />
-    </h6>
-    <div class="container3">
-      <h3 class="ruh3">Registro de Proveedor</h3>
-      <form
-        action="/proveedor/registro"
-        method="POST"
-        enctype="multipart/form-data"
-      >
-        <label class="textofp" for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required /><br />
 
-        <label class="textofp" for="email">Email:</label>
-        <input
-          class="textofp"
-          type="email"
-          id="email"
-          name="email"
-          required
-        /><br />
+      <label for="presentacion" id="pres">presentacion:</label>
+      <textarea id="presentacion" name="presentacion" rows="4" required></textarea><br />
 
-        <label class="textofp" type="file">Foto de perfil</label>
-        <input class="textofp" type="file" name="archivo" />
-
-        <label class="textofp" for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required /><br />
-
-        <label class="textofp" for="password2">Repita su contraseña:</label>
-        <input type="password" id="password2" name="password2" required /><br />
-
-        <label class="textofp" for="telefono">Teléfono:</label>
-        <input type="number" id="telefono" name="telefono" required /><br />
-
-        <label class="textofp" for="direccion">Dirección:</label>
-        <input type="text" id="direccion" name="direccion" required /><br />
-
-        <label class="textofp" for="honorarioHoras">Honorario por Horas:</label>
-        <input
-          type="number"
-          id="honorarioHoras"
-          name="honorarioHoras"
-          step="0.01"
-          required
-        /><br />
-
-        <label class="textofp" for="rubro">selecciona un rubro:</label>
-        <select id="rubro" name="rubro">
-          <option value="Jardinero">Jardinero</option>
-          <option value="Chapista">Chapista</option>
-          <option value="Piletero">Piletero</option>
-          <option value="Salidor">Salidor</option>
-          <option value="Limpieza">Limpieza</option>
-          <option value="Otro">
-            Otro
-            <input
-              type="text"
-              id="rubroOtro"
-              name="rubroOtro"
-              placeholder="Especificar otro rubro"
-              style="display: none"
-            />
-          </option>
-        </select>
-        <br />
-
-        <label for="presentacion" id="pres">presentacion:</label>
-        <textarea
-          id="presentacion"
-          name="presentacion"
-          rows="4"
-          required
-        ></textarea
-        ><br />
-
-        <button class="botonp" type="submit" id="botonr">
-          Registrar Proveedor
-        </button>
-      </form>
-    </div>
-    <section class="text-center container">
-      <div class="row mt-3">
-        <div class="divVolver">
-          <a
-            th:href="@{/login}"
-            class="btn btn-secondary my-2 botonVolver botones"
-            >Volver</a
-          >
-        </div>
+      <button class="botonp" type="submit" id="botonr">
+        Registrar Proveedor
+      </button>
+    </form>
+  </div>
+  <section class="text-center container">
+    <div class="row mt-3">
+      <div class="divVolver">
+        <a th:href="@{/login}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <footer class="pie">
-      <div th:replace="fragments/footer::foot"></div>
-      <div th:replace="fragments/redesS::red_soc"></div>
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <footer class="pie">
+    <div th:replace="fragments/footer::foot"></div>
+    <div th:replace="fragments/redesS::red_soc"></div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
