--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,6 +15,7 @@
         <!--<a class="nav-link" href="/proveedor/vistaProveedor">Perfil</a>-->
         <!-- <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
         <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/logout">Salir</a>
       </div>
     </div>
   </div>
