--- a/src/main/resources/templates/fragments/MisOrdenesUsuario.html
+++ b/src/main/resources/templates/fragments/MisOrdenesUsuario.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <title>Ordenes Proveedor</title>
+    <title>Ordenes Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/estilos2.css}">
@@ -15,24 +15,24 @@
     <div class="container">
       <div class="row justify-content-center">
           <div class="col-md-8">
-              <h1 class="text-center">Listado de Ordenes de Proveedor</h1>
+              <h1 class="text-center">Listado Ordenes de Usuario</h1>
           </div>
       </div>
     </div>
 
     <div>
-      <table class="table" style="width: 700px; border: 2px solid #FF7F00;">
-        <h3>Listado de ordenes Recibidas</h3>
-        <thead class="table-light" style="border: 1px solid #FF7F00;">
-          <th scope="col">id Orden</th>
-          <th scope="col">Nombre Usuario</th>
-          <th scope="col">Nombre Proveedor</th>
-          <th scope="col">Comentario</th>
-          <th scope="col">Estado</th>
-          <th scope="col">Acciones</th>
-        </thead>
-        <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
-          <tr style="color: #FFFFFF">
+    <table class="table" style="width: 700px; border: 2px solid #FF7F00;">
+      <h3>Listado de ordenes enviadas</h3>
+      <thead class="table-light" style="border: 1px solid #FF7F00;">
+        <th scope="col">id Orden</th>
+        <th scope="col">Nombre Usuario</th>
+        <th scope="col">Nombre Proveedor</th>
+        <th scope="col">Comentario</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Acciones</th>
+      </thead>
+      <tbody th:each="orden : ${listaOrdenes}" style="background-color: #333; border: 1px solid #FF7F00;">
+        <tr style="color: #FFFFFF">
             <th th:text="${orden.id}"></th>
             <td th:text="${orden.usuario.nombre}"></td>
             <td th:text="${orden.proveedor.nombre}"></td>
@@ -43,17 +43,18 @@
               <a th:href="@{/orden/aceptar/__${orden.id}__}">Aceptar cotizacion</a>
               <a th:href="@{/orden/calificar/__${orden.id}__}">Calificar</a>
             </td>
-          </tr>
-        </tbody>
-      </table>
+        </tr>
+      </tbody>
+    </table>
     </div>
 
+
     <section class="">
-      <div class="row mt-3">
-          <div class="divVolver">
-              <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
-          </div>
-      </div>
+        <div class="row mt-3">
+            <div class="divVolver">
+                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+            </div>
+        </div>
     </section>
 
     <footer class="pie">  </footer>
