--- a/src/main/resources/templates/panelAdmin.html
+++ b/src/main/resources/templates/panelAdmin.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <title>Panel Admin</title>
-</head>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/estilos2.css}">
 <body>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Perfil
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/logout">Cerrar Sesión</a></li>
-        </ul>
-    </li>
+    <header></header>
 
-    <h2>Panel Administrador</h2>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <h1 class="text-center">Panel de Administrador</h1>
+            </div>
+        </div>
+    </div>
+
     <div>
-        <table>
+        <table class="table" style="width: 700px; border: 2px solid #FF7F00;">
             <h3>Listado de Usuarios</h3>
-            <thead>
+            <thead class="table-light" style="border: 1px solid #FF7F00;">
                 <tr>
                     <th scope="col">id</th>
                     <th scope="col">Nombre</th>
@@ -33,21 +33,23 @@
                     <th scope="col">Direccion</th>
                 </tr>
             </thead>
-            <tbody th:each="usuario : ${usuarios}">
-                <th scope="row" th:text="${usuario.id}"></th>
-                <td th:text="${usuario.nombre}"></td>
-                <td th:text="${usuario.email}"></td>
-                <td th:text="${usuario.rol}"></td>
-                <td th:text="${usuario.telefono}"></td>
-                <td th:text="${usuario.direccion}"></td>
+            <tbody th:each="usuario : ${usuarios}" style="background-color: #333; border: 1px solid #FF7F00;">
+                <tr style="color: #FFFFFF">
+                    <th scope="row" th:text="${usuario.id}"></th>
+                    <td th:text="${usuario.nombre}"></td>
+                    <td th:text="${usuario.email}"></td>
+                    <td th:text="${usuario.rol}"></td>
+                    <td th:text="${usuario.telefono}"></td>
+                    <td th:text="${usuario.direccion}"></td>
+                </tr>
             </tbody>
         </table>
     </div>
 
     <div>
-        <table>
+        <table class="table" style="width: 700px; border: 2px solid #FF7F00;">
             <h3>Listado de Proveedores</h3>
-            <thead>
+            <thead class="table-light" style="border: 1px solid #FF7F00;">
                 <tr>
                     <th scope="col">id</th>
                     <th scope="col">Nombre</th>
@@ -57,18 +59,34 @@
                     <th scope="col">Direccion</th>
                 </tr>
             </thead>
-            <tbody th:each="proveedor : ${proveedores}">
-                <th scope="row" th:text="${proveedor.id}"></th>
-                <td th:text="${proveedor.nombre}"></td>
-                <td th:text="${proveedor.email}"></td>
-                <td th:text="${proveedor.rol}"></td>
-                <td th:text="${proveedor.telefono}"></td>
-                <td th:text="${proveedor.direccion}"></td>
+            <tbody th:each="proveedor : ${proveedores}" style="background-color: #333; border: 1px solid #FF7F00;">
+                <tr style="color: #FFFFFF">
+                    <th scope="row" th:text="${proveedor.id}"></th>
+                    <td th:text="${proveedor.nombre}"></td>
+                    <td th:text="${proveedor.email}"></td>
+                    <td th:text="${proveedor.rol}"></td>
+                    <td th:text="${proveedor.telefono}"></td>
+                    <td th:text="${proveedor.direccion}"></td>
+                </tr>
             </tbody>
         </table>
     </div>
 
-    </div>
+    <section class="">
+        <div class="row mt-3">
+            <div class="divVolver">
+                <a href="/" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="pie">  </footer>
+
+    <script src="js/heafoo.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
