--- a/src/main/resources/templates/fragments/navbarprov.html
+++ b/src/main/resources/templates/fragments/navbarprov.html
@@ -9,7 +9,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="/">Inicio</a>
+          <!--<a class="nav-link active" href="/">Inicio</a>-->
           <!--<a class="nav-link" href="/proveedor/buscador">Buscar</a>-->
           <!--<a class="nav-link" href="/proveedor/vistaProveedor">Perfil</a>-->
           <!-- <a class="nav-link" href="/proveedor/registrar">RegProv</a>-->
